WebUI: View Delete updated

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Delete.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Delete.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Delete user</h2>
 
-<div>
-    <p>@Model.Name</p>
-</div>
-<input type="submit" class="btn btn-danger" value="Delete" />
-<input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
-
+@using (Html.BeginForm())
+{
+    @Html.HiddenFor(x => x.Id)
+    <div>
+        <p>@Model.Name</p>
+    </div>
+    <input type="submit" class="btn btn-danger" value="Delete" />
+    <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
+}
