--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -7,6 +7,7 @@
 }
 
 @Html.ActionLink("Register user", "Register", null, new { @class = "btn btn-primary" })
+@Html.ActionLink("Sales list", "Index", "Purchase")
 <div class="panel panel-primary">
     <div class="panel-heading">
         Users accounts
