Updated: Register now avaliable for anonymous user. Some css updates

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -6,8 +6,7 @@
     ViewBag.Title = "Index";
 }
 
-@Html.ActionLink("Register user", "Register", null, new { @class = "btn btn-primary" })
-@Html.ActionLink("Sales list", "Index", "Purchase")
+<a class="btn btn-primary" href="/Purchase/Index/">Sales</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         Users accounts
