--- a/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
@@ -6,7 +6,8 @@
 }
 
 
-@Html.ActionLink("Create purchase", "Create", "Purchase")
+<a class="btn btn-primary" href="/Admin/Index/">Users</a>
+<a class="btn btn-primary" href="/Purchase/Create/">Create</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         All sales
