--- a/Task05_MVC/UserStore.WebUI/Views/Account/Login.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Account/Login.cshtml
@@ -11,7 +11,6 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    ;
     <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl"/>
     <div class="form-group">
         <label>Name</label>
@@ -23,3 +22,5 @@
     </div>
     <button class="btn btn-primary" type="submit">Enter</button>
 }
+<br/>
+Don't have account? @Html.ActionLink("Register", "Register")
