--- a/Task05_MVC/UserStore.WebUI/Views/Account/Register.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Account/Register.cshtml
@@ -9,20 +9,20 @@
 {
     <div class="form-group">
         <label>Name</label>
-        @Html.TextBoxFor(x => x.Name, new {@class="form-control"})
+        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
     </div>
 
     <div class="form-group">
         <label>Password</label>
-        @Html.PasswordFor(x => x.Password, new {@class="form-control"})
+        @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
     </div>
 
     <div class="form-group">
         <label>Confirm password</label>
-        @Html.PasswordFor(x => x.ConfirmPassword, new {@class="form-control"})
+        @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control" })
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
-
-    @Html.ActionLink("Cancel", "Index", null, new {@class="btn btn-default"})
+    <a class="btn btn-default" href="/Home/Index/">Cancel</a>
 }
-
+<br/>
+Already have account? @Html.ActionLink("Log in", "Login")
