--- a/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
@@ -38,6 +38,8 @@
                     <td>@purchase.ProductName</td>
                     <td>@purchase.Price</td>
                     <td>@purchase.Date</td>
+                    <td><p><a class="btn btn-default" href="/Purchase/Correct/@purchase.Id">Correct</a></p></td>
+                    <td><p><a class="btn btn-default" href="/Purchase/Delete/@purchase.Id">Delete</a></p></td>
                 </tr>
             }
         }
