WebUI: Purchase: Index - little fixes

--- a/Task05_MVC/UserStore.WebUI/Views/Purchase/Delete.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Purchase/Delete.cshtml
@@ -7,13 +7,21 @@
 <h2>Deleting purchase record</h2>
 @using (Html.BeginForm())
 {
-    <br/>
-    @Html.DisplayFor(x => x.ProductName)
-    <br/>
-    @Html.DisplayFor(x => x.Date)
-    <br/>
-    @Html.DisplayFor(x => x.ManagerName)
-    <br />
+    @Html.HiddenFor(x => x.Id)
+    <div>
+        <label>Manager name</label>
+        <p>@Model.ManagerName</p>
+    </div>
+
+    <div>
+        <label>Product name</label>
+        <p>@Model.ProductName</p>
+    </div>
+
+    <div>
+        <label>Date</label>
+        <p>@Model.Date</p>
+    </div>
     <input type="submit" class="btn btn-danger" value="Delete" />
+    <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
 }
-<input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
