--- a/Task05_MVC/UserStore.WebUI/Views/Purchase/Delete.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Purchase/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserStore.BLL.DTO.PurchaseDto
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete purchase";
 }
 
 <h2>Deleting purchase record</h2>
