--- a/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Purchase/Index.cshtml
@@ -8,6 +8,7 @@
 
 <a class="btn btn-primary" href="/Admin/Index/">Users</a>
 <a class="btn btn-primary" href="/Purchase/Create/">Create</a>
+<a class="btn btn-primary" href="/Manager/Index/">Managers</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         All sales
