Updated: Resolved problem with deleting Manager

--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserStore.WebUI.Models.ManagerCreateModel
+﻿@model UserStore.WebUI.Models.ManagerModel
 
 @{
     ViewBag.Title = "Create manager";
