Updated: Purchases changed to Order. Rebuilded Db structure

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Index";
 }
 
-<a class="btn btn-primary" href="/Purchase/Index/">Sales</a>
+<a class="btn btn-primary" href="/Order/Index/">Sales</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         Users accounts
