--- a/Task05_MVC/UserStore.WebUI/Views/Order/Create.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserStore.WebUI.Models.PurchaseCreateModel
+﻿@model UserStore.WebUI.Models.OrderCreateModel
 
 @{
     ViewBag.Title = "Create purchase";
