BLL: OrderService: fixed Create() method

--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserStore.WebUI.Models.ManagerModel
+﻿@model UserStore.BLL.DTO.ManagerDto
 
 @{
     ViewBag.Title = "Create manager";
@@ -11,7 +11,7 @@
 {
     <div class="form-group">
         <label>Manager name</label>
-        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+        @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
     </div>
 
     <button type="submit" class="btn btn-primary">Create</button>
