Updated. Now retrieving all data from database. Need to fill HomeController Index() method

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -6,7 +6,6 @@
     ViewBag.Title = "Index";
 }
 
-<a class="btn btn-primary" href="/Order/Index/">Sales</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         Users accounts
@@ -38,3 +37,5 @@
         }
     </table>
 </div>
+
+<a class="btn btn-default" href="/Order/Index/">Sales</a>
