--- a/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
@@ -5,10 +5,6 @@
     ViewBag.Title = "Index";
 }
 
-
-<a class="btn btn-primary" href="/Admin/Index/">Users</a>
-<a class="btn btn-primary" href="/Order/Create/">Create</a>
-<a class="btn btn-primary" href="/Manager/Index/">Managers</a>
 <div class="panel panel-primary">
     <div class="panel-heading">
         All sales
@@ -47,4 +43,7 @@
     </table>
 </div>
 
-
+<a class="btn btn-success" href="/Order/Create/">Create</a>
+<a class="btn btn-default" href="/Admin/Index/">Users</a>
+<a class="btn btn-default" href="/Manager/Index/">Managers</a>
+<a class="btn btn-default" href="/Product/Index/">Products</a>
