--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Create.cshtml
@@ -14,6 +14,6 @@
         @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-success">Create</button>
     <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
 }
