--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Delete.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Delete.cshtml
@@ -5,6 +5,9 @@
 }
 
 <h2>Deleting manager from database</h2>
+<h2>Warning! All records such as order history with this manager will be erased!</h2>
+<h2>Are you sure?</h2>
+
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(x => x.Id)
