--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Edit.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Edit.cshtml
@@ -14,6 +14,6 @@
         @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
     </div>
 
-    <input type="submit" class="btn btn-danger" value="Correct" />
+    <input type="submit" class="btn btn-danger" value="Edit" />
     <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
 }
