--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
@@ -5,35 +5,35 @@
     ViewBag.Title = "Index";
 }
 
-<a class="btn btn-primary" href="/Manager/Create/">Create</a>
-
 <div class="panel panel-primary">
-<div class="panel-heading">
-    All sales
-</div>
-<table class="table table-striped">
-    <tr>
-        <th>Manager Id</th>
-        <th>Manager name</th>
-    </tr>
-    @if (!Model.Any())
-    {
+    <div class="panel-heading">
+        All sales
+    </div>
+    <table class="table table-striped">
         <tr>
-            <td colspan="3" class="text-center">There is no purchases</td>
+            <th>Manager Id</th>
+            <th>Manager name</th>
         </tr>
-    }
-    else
-    {
-        foreach (var manager in Model)
+        @if (!Model.Any())
         {
             <tr>
-                <td>@manager.Id</td>
-                <td>@manager.LastName</td>
-                <td><p><a class="btn btn-default" href="/Manager/Edit/@manager.Id">Edit</a></p></td>
-                <td><p><a class="btn btn-default" href="/Manager/Delete/@manager.Id">Delete</a></p></td>
+                <td colspan="3" class="text-center">There is no purchases</td>
             </tr>
         }
-    }
-</table>
+        else
+        {
+            foreach (var manager in Model)
+            {
+                <tr>
+                    <td>@manager.Id</td>
+                    <td>@manager.LastName</td>
+                    <td><p><a class="btn btn-default" href="/Manager/Edit/@manager.Id">Edit</a></p></td>
+                    <td><p><a class="btn btn-default" href="/Manager/Delete/@manager.Id">Delete</a></p></td>
+                </tr>
+            }
+        }
+    </table>
 </div>
+
+<a class="btn btn-success" href="/Manager/Create/">Create</a>
 
