--- a/Task05_MVC/UserStore.WebUI/Views/Order/Create.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model UserStore.WebUI.Models.OrderCreateModel
 
 @{
-    ViewBag.Title = "Create purchase";
+    ViewBag.Title = "Create order";
 }
 
 @Html.ValidationSummary(false)
@@ -32,6 +32,6 @@
         @Html.TextBoxFor(x => x.Date, new { @class = "form-control" })
     </div>
 
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button type="submit" class="btn btn-success">Create</button>
     <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
 }
