--- a/Task05_MVC/UserStore.WebUI/Views/Order/Edit.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Edit.cshtml
@@ -34,6 +34,6 @@
         @Html.TextBoxFor(x => x.ClientName, new { @class = "form-control" })
     </div>
 
-    <input type="submit" class="btn btn-danger" value="Correct" />
+    <input type="submit" class="btn btn-danger" value="Edit" />
     <input type="button" class="btn btn-default" title="Back" value="Back" onclick="history.back()" />
 }
