Little update. Added all orders to Index() of HomeController

--- a/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
@@ -21,7 +21,7 @@
         @if (!Model.Any())
         {
             <tr>
-                <td colspan="3" class="text-center">There is no purchases</td>
+                <td colspan="3" class="text-center">There is no orders</td>
             </tr>
         }
         else
