--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -1,7 +1,38 @@
-﻿
+﻿@using UserStore.BLL.DTO
+
+@model IEnumerable<OrderDto>
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Home page</h2>
-
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        All sales
+    </div>
+    <table class="table table-striped">
+        <tr>
+            <th>Manager name</th>
+            <th>Product name</th>
+            <th>Product price</th>
+            <th>Purchase date</th>
+        </tr>
+        @if (!Model.Any())
+        {
+            <tr>
+                <td colspan="3" class="text-center">There is no orders</td>
+            </tr>
+        }
+        else
+        {
+            foreach (var purchase in Model)
+            {
+                <tr>
+                    <td>@purchase.ManagerName</td>
+                    <td>@purchase.ProductName</td>
+                    <td>@purchase.Price</td>
+                    <td>@purchase.Date</td>
+                </tr>
+            }
+        }
+    </table>
+</div>
