Start counting price. All ok. Correct input is present

--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -47,9 +47,14 @@
         <label class="control-label">Date:</label>
         @Html.DropDownList("date", Model.Dates,
             new { @class = "form-control" })
+        
+        <label class="control-label">From value:</label>
+        @Html.TextBoxFor(x => x.FromValue, new {@type="number", @value="100", @min="0", @step="0.01", @class="form-control"})
     </div>
-    <input type="submit" value="Filter" class="btn btn-default" />
+    <input type="submit" value="Filter" class="btn btn-default"/>
 </form>
+
+
 
 <table class="table table-striped">
     <tr>
