--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -49,7 +49,10 @@
             new { @class = "form-control" })
         
         <label class="control-label">From value:</label>
-        @Html.TextBoxFor(x => x.FromValue, new {@type="number", @value="100", @min="0", @step="0.01", @class="form-control"})
+        @Html.TextBoxFor(x => x.FromValue, new {@type="number", @value="10", @min="0", @step="0.01", @class="form-control"})
+
+        <label class="control-label">To value:</label>
+        @Html.TextBoxFor(x => x.ToValue, new { @type = "number", @value = "200", @min = "0", @step = "0.01", @class = "form-control" })
     </div>
     <input type="submit" value="Filter" class="btn btn-default"/>
 </form>
