Added "paginator" and it's working!)

--- a/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Home/Index.cshtml
@@ -87,6 +87,10 @@
     }
 </table>
 
+<div class="btn-group">
+    @Html.PageLinks(Model.PagingInfo, x => Url.Action("Index", new { page = x }))
+</div>
+
 @*@using (Ajax.BeginForm("OrdersList", new AjaxOptions { UpdateTargetId = "results" }))
 {
     <div class="form-group">
