--- a/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Order/Index.cshtml
@@ -15,7 +15,7 @@
             <th>Manager name</th>
             <th>Client name</th>
             <th>Product name</th>
-            <th>Product price</th>
+            <th>Order price</th>
             <th>Purchase date</th>
         </tr>
         @if (!Model.Any())
