--- a/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Manager/Index.cshtml
@@ -1,9 +1,14 @@
-﻿@using UserStore.BLL.DTO
+﻿@model PagedList.IPagedList<UserStore.BLL.DTO.ManagerDto>
+@using PagedList.Mvc;
 
-@model IEnumerable<ManagerDto>
 @{
     ViewBag.Title = "Index";
 }
+
+<a class="btn btn-success" href="/Manager/Create/">Create</a>
+<a class="btn btn-default" href="/Admin/Index/">Users</a>
+<a class="btn btn-default" href="/Order/Index/">Orders</a>
+<a class="btn btn-default" href="/Product/Index/">Products</a>
 
 <div class="panel panel-primary">
     <div class="panel-heading">
@@ -35,5 +40,6 @@
     </table>
 </div>
 
-<a class="btn btn-success" href="/Manager/Create/">Create</a>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) from @Model.PageCount
 
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page }))
