Added search to Product, Admin and Managers (AJAX)

--- a/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Admin/Index.cshtml
@@ -5,9 +5,25 @@
     ViewBag.Title = "Index";
 }
 
-<a class="btn btn-default" href="/Order/Index/">Orders</a>
-<a class="btn btn-default" href="/Manager/Index/">Managers</a>
-<a class="btn btn-default" href="/Product/Index/">Products</a>
+@Scripts.Render("~/scripts/jquery-1.10.2.min.js")
+@Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
+
+<div class="btn btn-group">
+    <a class="btn btn-default" href="/Order/Index/">Orders</a>
+    <a class="btn btn-default" href="/Manager/Index/">Managers</a>
+    <a class="btn btn-default" href="/Product/Index/">Products</a>
+</div>
+
+@using (Ajax.BeginForm("UserSearch", new AjaxOptions { UpdateTargetId = "results" }))
+{
+    <div class="form-group">
+        <input type="text" name="name" class="form-control" />
+        <input type="submit" class="btn btn-default" value="Search" />
+    </div>
+}
+
+<div id="results">
+</div>
 
 <div class="panel panel-primary">
     <div class="panel-heading">
@@ -22,7 +38,7 @@
         @if (!Model.Any())
         {
             <tr>
-                <td colspan="3" class="text-center">There is no user accounts</td>
+                <td colspan="3" class="text-center">There are no users accounts</td>
             </tr>
         }
         else
