--- a/Task05_MVC/UserStore.WebUI/Views/Product/Index.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Product/Index.cshtml
@@ -5,11 +5,26 @@
     ViewBag.Title = "Index";
 }
 
-<a class="btn btn-default" href="/Product/Create/">Create</a>
-<a class="btn btn-default" href="/Manager/Index/">Managers</a>
-<a class="btn btn-default" href="/Order/Index/">Orders</a>
-<a class="btn btn-default" href="/Admin/Index/">Users</a>
+@Scripts.Render("~/scripts/jquery-1.10.2.min.js")
+@Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
 
+<div class="btn btn-group">
+    <a class="btn btn-success" href="/Product/Create/">Create</a>
+    <a class="btn btn-default" href="/Manager/Index/">Managers</a>
+    <a class="btn btn-default" href="/Order/Index/">Orders</a>
+    <a class="btn btn-default" href="/Admin/Index/">Users</a>
+</div>
+
+@using (Ajax.BeginForm("ProductSearch", new AjaxOptions { UpdateTargetId = "results" }))
+{
+    <div class="form-group">
+        <input type="text" name="name" class="form-control" />
+        <input type="submit" class="btn btn-default" value="Search" />
+    </div>
+}
+
+<div id="results">
+</div>
 
 <div class="panel panel-primary">
     <div class="panel-heading">
