--- a/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/Task05_MVC/UserStore.WebUI/Views/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Users", "Index", "Admin")</li>
+                    <li>@Html.ActionLink("Orders", "Index", "Order")</li>
+                    <li>@Html.ActionLink("Managers", "Index", "Manager")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Product")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
